[gd_scene load_steps=10 format=3 uid="uid://cyw5bgp6hyog5"]

[ext_resource type="Script" path="res://scripts/navigation/WorldMap.gd" id="1_0k4o8"]
[ext_resource type="PackedScene" uid="uid://qbsqjnjos6cu" path="res://scenes/navigation/LevelIcon.tscn" id="1_4jgsn"]
[ext_resource type="Texture2D" uid="uid://duo4nm0q45qck" path="res://assets/world_map.png" id="2_s0wiu"]
[ext_resource type="Theme" uid="uid://cmw6g5pt5rmve" path="res://resources/main_theme.tres" id="3_5f6nw"]
[ext_resource type="Texture2D" uid="uid://d1m5vjin71foo" path="res://assets/level_highlight.png" id="3_l1xsg"]

[sub_resource type="Gradient" id="Gradient_xc3rg"]
offsets = PackedFloat32Array(0.62963, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qkea1"]
gradient = SubResource("Gradient_xc3rg")

[sub_resource type="Gradient" id="Gradient_eod3o"]
colors = PackedColorArray(0.12549, 0.168627, 0.313726, 1, 0.12549, 0.168627, 0.313726, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_27k1l"]
gradient = SubResource("Gradient_eod3o")

[node name="WorldMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0k4o8")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(768, 768)
scale = Vector2(2, 2)
texture = ExtResource("2_s0wiu")

[node name="LevelHolder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level_1" parent="LevelHolder" instance=ExtResource("1_4jgsn")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 222.0
offset_top = 272.0
offset_right = 222.0
offset_bottom = 272.0
grow_horizontal = 1
grow_vertical = 1
level_path = "res://scenes/levels/level_1.tscn"

[node name="Level_2" parent="LevelHolder" instance=ExtResource("1_4jgsn")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 500.0
offset_top = 796.0
offset_right = 500.0
offset_bottom = 796.0
grow_horizontal = 1
grow_vertical = 1
level_path = "res://scenes/levels/level_2.tscn"

[node name="level_3" parent="LevelHolder" instance=ExtResource("1_4jgsn")]
layout_mode = 1
offset_left = 361.0
offset_top = -266.0
offset_right = 361.0
offset_bottom = -266.0
level_path = "res://scenes/levels/level_2.tscn"

[node name="level_4" parent="LevelHolder" instance=ExtResource("1_4jgsn")]
layout_mode = 1
offset_left = 499.0
offset_top = 374.0
offset_right = 499.0
offset_bottom = 374.0
level_path = "res://scenes/levels/level_2.tscn"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1000.0
offset_top = 1000.0
offset_right = 1000.0
offset_bottom = 1000.0
grow_horizontal = 2
grow_vertical = 2

[node name="Camera2D" type="Camera2D" parent="Control"]
zoom = Vector2(1.2, 1.2)
limit_left = 0
limit_top = -128
limit_right = 1536
limit_bottom = 1536
limit_smoothed = true
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Control/Camera2D"]

[node name="LevelInfoBanner" type="Control" parent="Control/Camera2D/CanvasLayer"]
custom_minimum_size = Vector2(1536, 256)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="dropshadow" type="TextureRect" parent="Control/Camera2D/CanvasLayer/LevelInfoBanner"]
layout_mode = 0
offset_left = 1534.0
offset_top = 94.0
offset_right = 1790.0
offset_bottom = 1629.0
rotation = 1.5708
texture = SubResource("GradientTexture1D_qkea1")

[node name="TextureRect" type="TextureRect" parent="Control/Camera2D/CanvasLayer/LevelInfoBanner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_27k1l")

[node name="Panel" type="Panel" parent="Control/Camera2D/CanvasLayer/LevelInfoBanner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_5f6nw")

[node name="MarginContainer" type="MarginContainer" parent="Control/Camera2D/CanvasLayer/LevelInfoBanner/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Camera2D/CanvasLayer/LevelInfoBanner/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="Control/Camera2D/CanvasLayer/LevelInfoBanner/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Test Title"

[node name="Description" type="Label" parent="Control/Camera2D/CanvasLayer/LevelInfoBanner/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 4
theme_override_font_sizes/font_size = 24
text = "Test Description"
autowrap_mode = 2

[node name="PlayPrompt" type="Label" parent="Control/Camera2D/CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -136.0
offset_right = 20.0
offset_bottom = -113.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme = ExtResource("3_5f6nw")
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "[ Press Spacebar to Begin]"

[node name="LevelHighlight" type="Sprite2D" parent="Control"]
z_index = 2
position = Vector2(64, 64)
texture = ExtResource("3_l1xsg")
